Add tiny UI changes (image as link underline)

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,16 @@ body {
 }
 
 .prose a {
-  color: #107896;
+  background-image: url('../public/underline.svg');
+  background-size: 100% 4px;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  padding-bottom: 0.05rem;
+  text-decoration: none;
+}
+
+.prose a:hover {
+  color: #d70a1b;
 }
 
 .prose h1 {
