--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@ body {
   background-color: #f4ecd8;
 }
 
+.prose {
+  color: #333333;
+}
+
 .prose a {
   background-image: url('../public/underline.svg');
   background-size: 100% 4px;
@@ -20,8 +24,12 @@ body {
 }
 
 .prose h1 {
-  font-size: 1.125rem /* 18px */;
-  line-height: 1.75rem /* 28px */;
+  font-size: 1.5rem /* 24px */;
+  line-height: 2rem /* 32px */;
+}
+
+.prose h2 {
+  font-size: 1.2rem;
 }
 
 .prose blockquote {
@@ -32,10 +40,6 @@ body {
   font-style: italic;
   font-weight: light;
   color: #676767;
-}
-
-.prose h2 {
-  font-size: 1rem;
 }
 
 ::selection {
