change bullet point design

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,18 @@ body {
   background-color: #eeeeee;
 }
 
+.prose ul {
+  list-style: none; /* Remove default bullets */
+}
+
+.prose ul li::before {
+  content: '\25E6'; /* Unicode for a small circle */
+  color: slategrey; /* Change the color */
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 1em; /* Also needed for space (tweak if needed) */
+  margin-left: -1.5em; /* Tweak as needed */
+}
+
 .prose {
   color: #181010;
 }
