--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,9 @@ body {
 
 .prose {
   color: #181010;
+  width: 100%;
+  min-width: 100%;
+  padding: 0 1rem;
 }
 
 .prose a {
@@ -66,9 +69,10 @@ body {
 
 .prose img {
   width: 100%;
+  margin-bottom: 0;
   display: block;
   object-fit: cover;
-  border-radius: 1.5rem;
+  border-radius: 0.5rem;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 1px 10px 0 rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   filter: grayscale(1); /* Apply grayscale and blur effect */
@@ -78,6 +82,7 @@ body {
 .prose img:hover {
   filter: none;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  cursor: cell;
 }
 
 ::selection {
