Add wave as cursor for images

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,7 +82,9 @@ body {
 .prose img:hover {
   filter: none;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  cursor: cell;
+  cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🌊</text></svg>")
+      16 0,
+    auto;
 }
 
 ::selection {
